fixed --add-modules in start-controller.sh